# valkyrie

./: .gitignore  Cargo.toml  README.md  build_all.bat  fighting_game_vm  install_targets.bat  main.valk  output.c  readme.md  scheme_to_c_compiler.bak  scheme_to_c_compiler.rkt  test.game  verify.bat  ymir.2  ymir.rkt  ymir_forth.2  ymir_forth.rkt
Plasma/: main.bak  main.rkt  mtg_compiler.bak  mtg_compiler.rkt  test-ecs.bak  test-ecs.rkt  test-mtgparser.rkt
compiler/: c_funcs.rkt  five.bak  helpers.rkt  main.bak  main.rkt  sdl2.bak  sdl2.rkt  ymir.rkt
core/: Cargo.toml  README.md  architecture.md
core/crates/: architecture.md
core/crates/_platform_specific/platform_file_io/: Cargo.toml
core/crates/_platform_specific/platform_window_gfx/: Cargo.toml  README.md
core/crates/_platform_specific/platform_window_gfx/src/: lib.rs  wingfx_glutin.rs
core/crates/data_structures/src/: queue.rs
core/crates/ecs/: Cargo.toml
core/crates/ecs/src/: component_store.rs  entity.rs  entity_manager.rs  lib.rs
core/crates/valloc/: Cargo.toml  README.md
core/crates/vaudio/: Cargo.toml
core/crates/vmath/: Cargo.toml  README.md
core/crates/vphysics/: Cargo.toml
core/crates/vrenderer/: Cargo.toml
core/crates/window/: Cargo.toml
core/crates/window/src/: lib.rs
core/src/: lib.rs  wingfx.rs
elixir_test/: math.exs
engine/: README.md  build-sdl2.bat  build.bat  main.c  makefile
fighting_vm/: Cargo.toml  game.json
fighting_vm/src/: main.rs
gacha_poker/: Cargo.toml  README.md  mix.exs  testeval.exs
gacha_poker/assets/: package-lock.json
gacha_poker/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
gacha_poker/hand_eval/: .gitignore  README.md  mix.exs
gacha_poker/hand_eval/lib/: hand_eval.ex  test_stuff.exs
gacha_poker/hand_eval/test/: hand_eval_test.exs
gacha_poker/lib/: gacha_poker.ex  gacha_poker_web.ex
gacha_poker/lib/gacha_poker/: application.ex  repo.ex
gacha_poker/lib/gacha_poker_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
gacha_poker/priv/repo/: seeds.exs
gacha_poker/src/: main.rs
gacha_poker/test/: test_helper.exs
gacha_poker/test/support/: channel_case.ex  conn_case.ex  data_case.ex
games/gorekill/: ARCHITECTURE.md  Cargo.toml  README.md  assets.txt  builds.bat
games/gorekill/GORE_KILL/: Node2D.gdns  TestGorekill.gdns  TestGorekill.tscn  project.godot
games/gorekill/gore_kill_lib/: Cargo.toml
games/gorekill/gore_kill_lib/src/: lib.rs
games/gorekill/gore_kill_lib/src/sim/: components.rs  mod.rs
games/gorekill/src/: main.rs
games/re_magined/: Cargo.toml  README.md
hello_c/: README.md  build.bat  makefile
lisp_compiler/: .gitignore  README.md  mix.exs
lisp_compiler/lib/: game_compiler.exs
lisp_compiler/test/: game_compiler_test.exs
midi_test/: Cargo.toml
midi_test/src/: main.rs
neo/: .gitignore  ARCHITECTURE.md  README.md  makefile  run.bat  run.sh
neo/src/: ARCHITECTURE.md  main.c
neo/src/include/: cgltf.h  hello.c  hello.h
neo/src/window/: window.h
phoenix/: readme.md
phoenix/books/: .gitignore  README.md  mix.exs
phoenix/books/config/: config.exs  dev.exs
phoenix/clientserver/: README.md  mix.exs
phoenix/clientserver/lib/: client_server.ex
pil/: Cargo.toml
platform_independence_layer/: Cargo.toml  README.md
quick-racket/: quick.rkt
re4magined/: Cargo.toml
re4magined/src/: main.rs
rkt/: ymir.bak  ymir_forth.bak  ymir_forth.rkt
sdf_walking_sim/: Cargo.toml
sdf_walking_sim/src/: main.rs
src/: context.rs  dictionary.rs  id.rs  lib.rs  main.rs  program.rs  stack.rs
src/program/: gfx.rs  mod.rs
vaklkyrie/: README.md
vaklkyrie/valkyrie_rs/: Cargo.toml
valkyrie/: Cargo.toml  README.md
valkyrie/src/: main.rs  program.rs
valkyrie_core/: Cargo.toml  architecture.md
valkyrie_core/crates/: architecture.md
valkyrie_core/crates/_platform_specific/platform_threading/: Cargo.toml
valkyrie_core/crates/_platform_specific/platform_window_gfx/: Cargo.toml
valkyrie_core/crates/_platform_specific/platform_window_gfx/src/: glow_render.rs  glow_wingfx.rs  lib.rs  wgpu_render.rs  wgpu_wingfx.rs  wingfx_glutin.rs
valkyrie_core/crates/_platform_specific/platform_window_gfx/src/glow_render/: mod.rs  shader.frag
valkyrie_core/crates/core_application/: Cargo.toml
valkyrie_core/crates/core_application/src/: lib.rs  window_builder.rs
valkyrie_core/crates/core_conversions/src/: lib.rs
valkyrie_core/crates/core_data_structures/src/: hashmap.rs  queue.rs
valkyrie_core/crates/core_ecs/: ARCHITECTURE.md  Cargo.toml
valkyrie_core/crates/core_ecs/src/: component_store.rs  entity.rs  entity_manager.rs  lib.rs  world.rs
valkyrie_core/crates/core_file_io/: Cargo.toml
valkyrie_core/crates/core_math/: Cargo.toml
valkyrie_core/crates/core_math/src/: lib.rs  mat4.rs  vec3.rs
valkyrie_core/crates/core_renderer/: Cargo.toml
valkyrie_core/crates/core_renderer/src/: lib.rs
valkyrie_core/crates/core_simulation/: Cargo.toml
valkyrie_core/crates/core_simulation/src/: lib.rs
valkyrie_core/crates/core_threading/: Cargo.toml
valkyrie_core/crates/core_voxels/: Cargo.toml
valkyrie_core/crates/core_voxels/src/: child_descriptor.rs  lib.rs
valkyrie_core/crates/core_window/: Cargo.toml
valkyrie_core/crates/core_window/src/: lib.rs
valkyrie_core/crates/ecs/: README.md
valkyrie_core/crates/ecs/src/: component_store.rs  entity.rs  entity_manager.rs  lib.rs  world.rs
valkyrie_core/crates/renderer/: Cargo.toml
valkyrie_core/crates/threading/: Cargo.toml
valkyrie_core/crates/timing/: Cargo.toml
valkyrie_core/crates/window/: Cargo.toml
valkyrie_core/crates/window/src/: lib.rs
valkyrie_core/src/: application.rs  core_application.rs  core_sim.rs  core_sim_managers.rs  core_sim_renderable.rs  game_ecs.rs  lib.rs  rendering.rs  server_dummy_wingfx.rs  sim_managers.rs  windowing.rs  wingfx.rs  world.rs
ymir/: Cargo.toml  README.md  ecs.rkt  main.rkt
ymir/src/: main.rs
ymir/ymir_racket/: ecs.rkt
ymir_compiler/: Cargo.toml
ymir_compiler/src/: main.rs
ymir_racket/: engine.rkt  ymir.rkt
ymir_v0/: Cargo.toml
ymir_v0/src/: main.rs
(+39 files in other folders)
