[package]
name = "valkyrie"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# lib + bin definitions. Done this way to enable Android + Desktop builds.
[lib]
name = "valkyrie"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "valkyrie_executable"
path = "src/main.rs"

[dependencies]
# internal dependencies
core = {path = "core"}
pil = {path = "pil"}
# external dependencies
gl = "0.14.0"
sdl2 = {git="https://github.com/ericrobolson/rust-sdl2", features=["bundled"]}


# Android specific builds
[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.3.0"
ndk = { version = "0.3.0", features = ["trace"] }
jni = "0.19.0"

[package.metadata.android]
build_targets = [ "i686-linux-android"  ] # TODO: add in more "arm-linux-androideabi" "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" 
