[package]
name = "valkyrie"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# lib + bin definitions. Done this way to enable Android + Desktop builds.
[lib]
name = "valkyrie"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "valkyrie_executable"
path = "src/main.rs"

[dependencies]
core = {path = "core"}
pil = {path = "pil"}

# Android specific builds
[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.3.0"
ndk = { version = "0.3.0", features = ["trace"] }
jni = "0.19.0"

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]

[target.'wasm32-unknown-unknown']
rustflags = ["web_sys_unstable_apis"]