[package]
name = "core"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threading = {path="crates/threading"}
file_io = {path="crates/file_io"}
renderer = {path="crates/renderer"}
window = {path="crates/window"}

# Platform specific dependencies