[package]
name = "valkyrie"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "valkyrie_lib"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "valkyrie_bin"
path = "src/main.rs"


[dependencies]
winit = "0.24.0"
