[package]
name = "valkyrie"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# lib + bin definitions. Done this way to enable Android + Desktop builds.
[lib]
name = "valkyrie_lib"
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "valkyrie_bin"
path = "src/main.rs"

[dependencies]
winit = "0.24.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.3.0"
ndk = { version = "0.3.0", features = ["trace"] }
jni = "0.19.0"