[package]
name = "valkyrie_core"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_application = {path = "crates/core_application"}
core_data_structures = {path = "crates/core_data_structures"}
core_ecs = {path = "crates/core_ecs"}
core_file_io = {path="crates/core_file_io"}
core_threading = {path="crates/core_threading"}
core_timing = {path = "crates/core_timing"}
core_renderer = {path="crates/core_renderer"}
core_simulation = {path="crates/core_simulation"}
core_window = {path="crates/core_window"}
core_voxels = {path="crates/core_voxels"}

# Platform specific dependencies
platform_file_io = {path="crates/_platform_specific/platform_file_io"}
platform_threading = {path="crates/_platform_specific/platform_threading"}
platform_window_gfx = {path="crates/_platform_specific/platform_window_gfx"}
