[package]
name = "gore_kill_lib"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9.3"
euclid = "0.22.1"



valkyrie_core = {path = "../../../valkyrie_core", features = ["ecs", "simulation"]}
