[package]
name = "core_application"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_simulation = {path = "../core_simulation"}
core_window = {path = "../core_window"}
core_renderer = {path = "../core_renderer"}

platform_window_gfx = {path="../_platform_specific/platform_window_gfx"}
