[package]
name = "platform_window_gfx"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.26"
winit = "0.24"
wgpu = "0.7.0"
glow = "0.7.2"

# core deps
core_window = {path = "../../core_window"}
core_renderer = {path = "../../core_renderer"}