[package]
name = "platform_window_gfx"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# OpenGL
glutin = "0.26"
glow = "0.8.1"

# WGPU
winit = "0.24"
wgpu = "0.7.0"

# core deps
core_conversions = {path = "../../core_conversions"}
core_simulation = {path = "../../core_simulation"}
core_window = {path = "../../core_window"}
core_renderer = {path = "../../core_renderer"}